Create one HTML page per excursion.